src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>C501_IS_Adults__c</fullName>
        <label>Adults</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Children__c</fullName>
        <label>Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Commodity_Usage_JSON__c</fullName>
        <inlineHelpText>JSON data that records the total usage of commodities in the month of the most recent visit.</inlineHelpText>
        <label>Commodity Usage JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_Current_Points_Remaining__c</fullName>
        <description>Total points remaining in the month of the most recent visit.</description>
        <formula>C501_IS_Monthly_Points_Available__c - C501_IS_Current_Points_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total points remaining in the month of the most recent visit.</inlineHelpText>
        <label>Current Points Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Current_Points_Used__c</fullName>
        <description>Total number of points used in month of most recent visit.</description>
        <inlineHelpText>Total number of points used in month of most recent visit.</inlineHelpText>
        <label>Current Points Used</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_External_Created_Date__c</fullName>
        <description>Store the date the external entry was created.</description>
        <label>External Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_IS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>C501_IS_First_Visit__c</fullName>
        <label>First Visit</label>
        <summarizedField>Client_Visit__c.C501_IS_Visit_Date__c</summarizedField>
        <summaryForeignKey>Client_Visit__c.C501_IS_Household__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>C501_IS_Homeless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeless</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_IS_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_IS_Infant_Card_Expires__c</fullName>
        <label>Infant Card Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_IS_Infants__c</fullName>
        <label>Infants</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Monthly_Points_Available__c</fullName>
        <inlineHelpText>Number of points allowed per month, set automatically based on intake services settings.</inlineHelpText>
        <label>Monthly Points Available</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Most_Recent_Visit__c</fullName>
        <label>Most Recent Visit</label>
        <summarizedField>Client_Visit__c.C501_IS_Visit_Date__c</summarizedField>
        <summaryForeignKey>Client_Visit__c.C501_IS_Household__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>C501_IS_Notes__c</fullName>
        <label>Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_Out_Of_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_IS_Pending_Commodity_Usage_JSON__c</fullName>
        <inlineHelpText>JSON data that records the pending usage of commodities related to checkin queue.</inlineHelpText>
        <label>Pending Commodity Usage JSON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_Pending_Notes__c</fullName>
        <inlineHelpText>Pending notes related to checkin queue.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_Proof_of_Address_Date__c</fullName>
        <label>Proof of Address Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_IS_Proof_of_Address__c</fullName>
        <inlineHelpText>Type of address proof provided and/or initials of user who verified the address</inlineHelpText>
        <label>Proof of Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_IS_Seniors__c</fullName>
        <label>Seniors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Source</fullName>
                </value>
                <value>
                    <fullName>Referred by agency (identify in Notes)</fullName>
                </value>
                <value>
                    <fullName>Referred by individual</fullName>
                </value>
                <value>
                    <fullName>Newspaper, radio, TV, internet</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t know or won&apos;t say</fullName>
                </value>
                <value>
                    <fullName>Phone book</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Other (Identify in Notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_IS_Staff_Notes__c</fullName>
        <label>Staff Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_Tag_Notes__c</fullName>
        <label>Tag Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_Tags__c</fullName>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Cook</fullName>
                </value>
                <value>
                    <fullName>Special Diet</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_IS_Total_Visits__c</fullName>
        <label>Total Visits</label>
        <summaryForeignKey>Client_Visit__c.C501_IS_Household__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>C501_IS_Active_Households</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>C501_IS_First_Visit__c</columns>
        <columns>C501_IS_Most_Recent_Visit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>C501_IS_Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Active Households (Intake Service)</label>
    </listViews>
    <listViews>
        <fullName>C501_IS_All_Households</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>C501_IS_First_Visit__c</columns>
        <columns>C501_IS_Most_Recent_Visit__c</columns>
        <columns>C501_IS_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Households (Intake Services)</label>
    </listViews>
</CustomObject>